# Nebularr

./: .dockerignore  .env.example  .gitignore  .grype.yaml  .trivyignore.image  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.githooks/: commit-msg
.github/: dependabot.yml
Backlog/: ORIGINAL_PLAN_REFERENCE.md  V2_BACKLOG.md
alembic/: env.py
docs/: ALERTS_AND_SLOS.md  ARCHITECTURE.md  BACKUP_RESTORE.md  BRANDING.md  COMPOSE_RESOURCE_HINTS.md  DB_BOOTSTRAP.md  LOCKING_AND_DLQ.md  MIGRATIONS.md  OPERATIONS_RUNBOOK.md  PERF_INDEXING_PLAN.md  POOLING_AND_TIMEOUTS.md  REPORTING_ARCHITECTURE.md  SCHEDULER_TIMEZONE.md  SECRETS.md  V2_BACKLOG.md  WEBUI_AGENT_WORKFLOW.md  WEBUI_FRAMEWORK.md  WEBUI_REFERENCE_ASSETS.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
scripts/: bump-version.sh  check-version-sync.sh  configure-git-hooks.sh  docker-local-up.sh  docker-release-build.sh  export-compose-relevant-env.sh  one-click-all-in-one.sh  smoke.sh
tests/: arr_tag_fakes.py  fakes.py  test_alert_config_store.py  test_alert_notifier.py  test_alert_webhook_api.py  test_api_pagination_contract.py  test_arr_client.py  test_arr_client_contract.py  test_asset_serving.py  test_auth_api.py  test_config_endpoints_v26.py  test_coverage_tag_service.py  test_dub_sources.py  test_events.py  test_library_csv_stream.py  test_log_buffer.py  (+30 more)
(+213 files in other folders)
